k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: as400parser
  labels:
    name: as400parser
    app: as400parser
