k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: as400parser-service
  namespace: as400parser
  labels:
    app: as400parser
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 5000
    protocol: TCP
    name: http
  selector:
    app: as400parser
